# ai-code

./: .gitignore  package-lock.json
.claude/: settings.local.json
node-server/: .env.development  .env.pre  .env.production  .env.test  .gitignore  README.md  ecosystem.config.js  eslint.config.mjs  package-lock.json  package.json  socket-test-client.js
node-server/src/: app.module.ts  main.ts
node-server/src/adapters/: socket-io.adapter.ts
node-server/src/agent/: index.ts
node-server/src/config/: index.ts
node-server/src/filters/: all-exceptions.filter.ts
node-server/src/interceptor/: transform.interceptor.ts
node-server/src/middleware/: auth.middleware.ts
node-server/test/: app.e2e-spec.ts
python/: agent_example.py  bash.sh  pyproject.toml  python01.py  redis_memory_example.py  requirements.txt
python/agent/: main.py  prompt_template.py
react-app/: package-lock.json
react-app/.iflow/commands/: security-review.md
react-app/src/component/: EditText.tsx  TableComponent.css  TableComponent.jsx
react-app/src/pages/: TablePage.css  TablePage.jsx
typescript-nodejs/: package-lock.json  package.json
web-app/: package-lock.json  package.json
web-app/.iflow/commands/: newcomp.md
web-app/src/: App.css  App.jsx  index.css  main.jsx
web-app/src/components/: CounterDisplay.jsx
web-app/src/constants/: chat.ts
web-app/src/pages/: ChatbotPage.css  ChatbotPage.jsx  TablePage.css  TablePage.jsx  WebSocketPage.jsx
web-app/src/services/: socketService.ts
web-app/src/store/: chatbotAtoms.ts
web-app/src/utils/: rem.js
(+18 files in other folders)
