[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "langchain>=0.3.28",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.83",
    "langchain-ollama>=0.3.10",
    "openai>=2.29.0",
]
